# ez-embed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: embed_function.cmake
src/: embed.py
test/: CMakeLists.txt  data.txt  test.cpp
